# dicarlo-lab-to-nwb

./: .gitignore  README.md  make_env.yml  pipeline_template.yaml  pyproject.toml  requirements.txt  setup.py
src/dicarlo_lab_to_nwb/conversion/: __init__.py  aggregation.py  behaviorinterface.py  conversion_convert_session.py  conversion_metadata.yaml  conversion_notes.md  conversion_requirements.txt  conversion_sfm_images_session.py  conversion_sfm_videos_session.py  conversionbehaviorinterface.py  conversionnwbconverter.py  convert_project.py  convert_session.py  data_locator.py  metadata.yaml  normalizers_before_after.ipynb  parse_mworks_RSVP.py  pipeline.py  probe.py  probe_info.csv  probe_info_dicarlo.csv  project_config.yaml  project_config_SFM_foveal_videos.yaml  project_config_simulation.yaml  psth.py  showcase_notebook.ipynb  stimuli_interface.py  wbconverter.py
src/dicarlo_lab_to_nwb/conversion/quality_control/: latency.py  reliability.py  snr.py
src/dicarlo_lab_to_nwb/mworks_library/: mwk2reader.py  mwk_bars.py  mwk_rsvp.py  mwk_rsvp_new.py  mwk_rsvp_standalone.py
src/dicarlo_lab_to_nwb/neuro_pipeline/: convert_session.py  extract_spike_events_session.py  metadata.yaml  parse_mworks_RSVP.py  pipeline.py  probe.py  psth.py  session_meta_example.yaml  stimuli_interface.py
src/dicarlo_lab_to_nwb/quality_control/: latency.py  reliability.py  snr.py
src/dicarlo_lab_to_nwb/raw_data_upload/: convert_raw_SFM_images_dandi.py  convert_raw_SFM_vidos_dandi.py
src/dicarlo_lab_to_nwb/thresholding_pipeline/: convert_project.py  convert_session.py  normalizers_before_after.ipynb
(+1 files in other folders)
