[project]
name = "dicarlo-lab-to-nwb"
version = "0.0.1"
description = "NWB conversion scripts, functions, and classes for DiCarlo conversion"
readme = "README.md"
authors = [{ name = "CatalystNeuro", email = "ben.dichter@catalystneuro.com" }]
maintainers = [{ name = "CatalystNeuro", email = "ben.dichter@catalystneuro.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]


dependencies = [
  "neuroconv @ git+https://github.com/CatalystNeuro/neuroconv@main",
  "spikeinterface @ git+https://github.com/spikeinterface/spikeinterface@main",
  "neo @ git+https://github.com/NeuralEnsemble/python-neo@master",
  "scipy",
  "neo>=0.13.1",
  "matplotlib",
  "psutil",
]

[project.urls]
Repository="https://github.com/catalystneuro/dicarlo-lab-to-nwb"

[build-system]
requires = ["setuptools>", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.toml
  |\.yml
  |\.md
  |\.txt
  |\.sh
  |\.git
  |\.ini
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
reverse_relative = true
known_first_party = ["dicarlo_lab_to_nwb"]
